--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,10 @@
-django==4.0.7
+asgiref==3.5.2
+dj-database-url==1.0.0
+Django==4.0.7
+django-extensions==3.2.1
+django-heroku==0.3.1
 djangorestframework==3.14.0
+psycopg2==2.9.4
+pytz==2022.4
+sqlparse==0.4.3
+whitenoise==6.2.0
